[metadata]
name = scrapy-selenium-undetectable
version = 0.0.7
url = https://github.com/cyclehacker/scrapy-selenium-undetectable
licence = DO WHAT THE FUCK YOU WANT TO PUBLIC LICENSE
description = Scrapy with selenium and undetectable chromedriver
long_description = file:README.md

[options]
include_package_data = true

[pep8]
max-line-length = 100
